--- a/src/main/resources/org/example/mealprepmain/splashScreen.fxml
+++ b/src/main/resources/org/example/mealprepmain/splashScreen.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.SplashScreenController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@styles/splashScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.SplashScreenController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" text="Welcome to Meal Prep!" textAlignment="CENTER">
          <font>
