--- a/src/main/resources/org/example/mealprepmain/loginScreen.fxml
+++ b/src/main/resources/org/example/mealprepmain/loginScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -12,15 +13,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.LoginScreenController"
-       stylesheets="@styles/loginStyle.css" >
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/loginStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.LoginScreenController">
    <center>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane stylesheets="@styles/loginStyle.css" BorderPane.alignment="CENTER">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="66.0" minWidth="0.0" prefWidth="35.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="80.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="153.0" minWidth="10.0" prefWidth="153.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="106.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="66.0" minWidth="0.0" prefWidth="23.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="99.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="10.0" prefWidth="131.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="144.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="0.0" prefWidth="0.0" />
         </columnConstraints>
         <rowConstraints>
@@ -28,19 +28,21 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <PasswordField fx:id="passwordField" onAction="#handleLogin" prefHeight="25.0" prefWidth="106.0" promptText="Enter Password" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Button fx:id="loginButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleLogin" text="Log in" translateX="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <PasswordField fx:id="passwordField" onAction="#handleLogin" prefHeight="25.0" prefWidth="106.0" promptText="Enter Password" stylesheets="@styles/loginStyle.css" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="loginButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleLogin" prefHeight="39.0" prefWidth="82.0" stylesheets="@styles/loginStyle.css" text="Log in" translateX="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
-                  <Font size="14.0" />
+                  <Font name="Monospaced Regular" size="14.0" />
                </font>
             </Button>
-            <Button fx:id="cancelButton" alignment="CENTER" cancelButton="true" mnemonicParsing="false" onAction="#handleLogin" text="Cancel" textAlignment="CENTER" translateX="8.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Button fx:id="cancelButton" alignment="CENTER" cancelButton="true" mnemonicParsing="false" onAction="#handleLogin" stylesheets="@styles/loginStyle.css" text="Cancel" textAlignment="CENTER" translateX="8.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
-                  <Font size="14.0" />
+                  <Font name="Monospaced Regular" size="14.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="30.0" />
+               </GridPane.margin>
             </Button>
             <Label prefHeight="20.0" prefWidth="86.0" text="Username:" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
@@ -52,12 +54,20 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="usernameField" onAction="#handleLogin" promptText="Enter username" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label fx:id="loginTitle" alignment="CENTER" prefWidth="150.0" text="LOG IN" GridPane.columnIndex="2">
+            <TextField fx:id="usernameField" onAction="#handleLogin" promptText="Enter username" stylesheets="@styles/loginStyle.css" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label fx:id="loginTitle" alignment="CENTER" prefWidth="150.0" stylesheets="@styles/loginStyle.css" text="LOG IN" GridPane.columnIndex="2">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
+            <Button fx:id="signUpButton" mnemonicParsing="false" styleClass="sign-up" stylesheets="@styles/loginStyle.css" text="Sign Up" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Monospaced Regular" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="30.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
    </center>
