--- a/src/main/resources/org/example/mealprepmain/loginScreen.fxml
+++ b/src/main/resources/org/example/mealprepmain/loginScreen.fxml
@@ -1,81 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/loginStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.LoginScreenController">
-   <center>
-      <GridPane stylesheets="@styles/loginStyle.css" BorderPane.alignment="CENTER">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="66.0" minWidth="0.0" prefWidth="23.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="99.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="10.0" prefWidth="131.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="144.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="0.0" prefWidth="0.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.LoginScreenController">
+   <children>
+      <Pane fx:id="loginPane" layoutX="60.0" layoutY="39.0" prefHeight="523.0" prefWidth="680.0">
          <children>
-            <PasswordField fx:id="passwordField" onAction="#handleLogin" prefHeight="25.0" prefWidth="106.0" promptText="Enter Password" stylesheets="@styles/loginStyle.css" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Button fx:id="loginButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleLogin" prefHeight="39.0" prefWidth="82.0" stylesheets="@styles/loginStyle.css" text="Log in" translateX="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Label layoutX="266.0" layoutY="34.0" text="Sign In">
                <font>
-                  <Font name="Monospaced Regular" size="14.0" />
+                  <Font name="Monospaced Bold" size="30.0" />
+               </font>
+            </Label>
+            <ImageView fx:id="loginScreenIV" fitHeight="140.0" fitWidth="254.0" layoutX="215.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/cooking.gif" />
+               </image>
+            </ImageView>
+            <Label layoutX="150.0" layoutY="251.0" text="Username:">
+               <font>
+                  <Font name="Monospaced Bold" size="25.0" />
+               </font>
+            </Label>
+            <Label layoutX="150.0" layoutY="308.0" text="Password:">
+               <font>
+                  <Font name="Monospaced Bold" size="25.0" />
+               </font>
+            </Label>
+            <Label layoutX="150.0" layoutY="371.0" text="Don't have an account? Sign up here">
+               <font>
+                  <Font name="Monospaced Regular" size="17.0" />
+               </font>
+            </Label>
+            <Button fx:id="registerButton" layoutX="537.0" layoutY="369.0" mnemonicParsing="false" text="Sign Up">
+               <font>
+                  <Font name="Monospaced Regular" size="13.0" />
                </font>
             </Button>
-            <Button fx:id="cancelButton" alignment="CENTER" cancelButton="true" mnemonicParsing="false" onAction="#handleLogin" stylesheets="@styles/loginStyle.css" text="Cancel" textAlignment="CENTER" translateX="8.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <TextField fx:id="usernameTF" layoutX="329.0" layoutY="254.0" prefHeight="25.0" prefWidth="254.0" promptText="enter username or email" />
+            <TextField fx:id="passwordTF" layoutX="329.0" layoutY="311.0" prefHeight="25.0" prefWidth="254.0" promptText="enter password" />
+            <Label layoutX="150.0" layoutY="407.0" text="Forgot your Password? ">
                <font>
-                  <Font name="Monospaced Regular" size="14.0" />
+                  <Font name="Monospaced Regular" size="17.0" />
                </font>
-               <GridPane.margin>
-                  <Insets left="30.0" />
-               </GridPane.margin>
+            </Label>
+            <Button fx:id="createNewPasswordButton" layoutX="420.0" layoutY="405.0" mnemonicParsing="false" text="Create new Password">
+               <font>
+                  <Font name="Monospaced Regular" size="13.0" />
+               </font>
             </Button>
-            <Label prefHeight="20.0" prefWidth="86.0" text="Username:" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="loginButton" layoutX="593.0" layoutY="312.0" mnemonicParsing="false" text="Log in">
                <font>
-                  <Font name="Century Gothic" size="14.0" />
+                  <Font name="Monospaced Regular" size="13.0" />
                </font>
-            </Label>
-            <Label text="Password: " GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField fx:id="usernameField" onAction="#handleLogin" promptText="Enter username" stylesheets="@styles/loginStyle.css" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label fx:id="loginTitle" alignment="CENTER" prefWidth="150.0" stylesheets="@styles/loginStyle.css" text="LOG IN" GridPane.columnIndex="2">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Button fx:id="signUpButton" mnemonicParsing="false" styleClass="sign-up" stylesheets="@styles/loginStyle.css" text="Sign Up" GridPane.columnIndex="3" GridPane.rowIndex="3">
-               <font>
-                  <Font name="Monospaced Regular" size="14.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="30.0" />
-               </GridPane.margin>
             </Button>
          </children>
-      </GridPane>
-   </center>
-   <left>
-      <ImageView fx:id="sideImageGif" fitHeight="402.0" fitWidth="200.0" pickOnBounds="true" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@images/cooking.gif" />
-         </image>
-      </ImageView>
-   </left>
-</BorderPane>
+      </Pane>
+   </children>
+</AnchorPane>
