--- a/src/main/resources/org/example/mealprepmain/splashScreen.fxml
+++ b/src/main/resources/org/example/mealprepmain/splashScreen.fxml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@styles/splashScreen.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.SplashScreenController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.SplashScreenController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" text="Welcome to Meal Prep!" textAlignment="CENTER">
-         <font>
-            <Font name="Century Gothic" size="24.0" />
-         </font>
-      </Label>
+      <Pane layoutX="51.0" layoutY="38.0" prefHeight="524.0" prefWidth="699.0">
+         <children>
+            <Label layoutX="87.0" layoutY="75.0" text="Welcome to Meal Prep Tech">
+               <font>
+                  <Font name="Monospaced Bold" size="35.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="199.0" fitWidth="352.0" layoutX="174.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/choppingcarrots.gif" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
-</StackPane>
+</AnchorPane>
