--- a/src/main/resources/org/example/mealprepmain/registrationScreen.fxml
+++ b/src/main/resources/org/example/mealprepmain/registrationScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -103,6 +104,11 @@
                   <Image url="@images/eatingImage.jpeg" />
                </image>
             </ImageView>
+            <Button fx:id="registerButton" layoutX="590.0" layoutY="530.0" mnemonicParsing="false" onAction="#onRegisterButtonClick" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #4CAF50;" text="Register" textFill="WHITE">
+               <font>
+                  <Font name="Monospaced Bold" size="18.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
    </children>
