--- a/src/main/resources/org/example/mealprepmain/homeScreen.fxml
+++ b/src/main/resources/org/example/mealprepmain/homeScreen.fxml
@@ -24,7 +24,10 @@
 <?import javafx.scene.text.Font?>
 
 <?import javafx.scene.control.ListView?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.HomeScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="800.0" prefWidth="1000.0" styleClass="home-container" xmlns="http://javafx.com/javafx/23.0.1"
+            stylesheets="@styles/homeScreenStyle.css"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.mealprepmain.HomeScreenController">
 
    <left>
       <GridPane prefHeight="590.0" prefWidth="100.0" BorderPane.alignment="CENTER">
@@ -67,24 +70,23 @@
 
    <center>
       <StackPane fx:id="centerStack">
-
          <!-- Meal Pane -->
          <VBox fx:id="mealPane" spacing="10" visible="true">
             <padding>
-               <Insets top="10" right="10" bottom="10" left="10" />
+               <Insets top="20" right="20" bottom="20" left="20" />
             </padding>
 
             <Label fx:id="welcomeLabel" text="Welcome!" style="-fx-font-family: Monospaced; -fx-font-size: 16;" />
 
-            <HBox spacing="10" alignment="CENTER_LEFT">
-               <Label text="Search for Recipes:" />
-               <TextField fx:id="searchTextField" promptText="Enter recipe name" />
-               <Button fx:id="searchButton" text="Search" />
+            <HBox spacing="15" alignment="CENTER_LEFT">
+               <Label text="Search for Recipes:" style="-fx-text-fill: black; -fx-font-size: 16px;" />
+               <TextField fx:id="searchTextField" promptText="Enter recipe name" style="-fx-pref-width: 300px;" />
+               <Button fx:id="searchButton" text="Search" style="-fx-font-size: 14px;" />
             </HBox>
 
             <Label fx:id="loadingLabel" text="Loading..." visible="false" style="-fx-font-size: 16px; -fx-text-fill: gray;" />
 
-            <GridPane hgap="20" vgap="10">
+            <GridPane hgap="20" vgap="15">
                <columnConstraints>
                   <ColumnConstraints percentWidth="35" />
                   <ColumnConstraints percentWidth="65" />
@@ -93,36 +95,36 @@
                   <RowConstraints vgrow="ALWAYS" />
                </rowConstraints>
 
-               <VBox spacing="10" GridPane.columnIndex="0">
-                  <ScrollPane fx:id="ingredientScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="500">
+               <VBox spacing="15" GridPane.columnIndex="0">
+                  <ScrollPane fx:id="ingredientScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="500" style="-fx-padding: 10;">
                      <content>
-                        <TilePane fx:id="ingredientsTilePane" />
+                        <TilePane fx:id="ingredientsTilePane" style="-fx-padding: 10;" />
                      </content>
                   </ScrollPane>
 
-                  <Button fx:id="removeIngredientsButton" text="Remove Selected Ingredients" />
+                  <Button fx:id="removeIngredientsButton" text="Remove Selected Ingredients" style="-fx-font-size: 14px;" />
                </VBox>
 
-               <VBox spacing="10" GridPane.columnIndex="1">
-                  <Label fx:id="mealLabel" text="Meal Label" underline="true">
+               <VBox spacing="15" GridPane.columnIndex="1">
+                  <Label fx:id="mealLabel" text="Meal Label" underline="true" style="-fx-text-fill: white;">
                      <font>
                         <Font name="Monospaced Regular" size="20.0" />
                      </font>
                   </Label>
 
-                  <ImageView fx:id="mealImageView" fitHeight="200" fitWidth="300" preserveRatio="true" />
+                  <ImageView fx:id="mealImageView" fitHeight="200" fitWidth="300" preserveRatio="true" style="-fx-effect: dropshadow(gaussian, #FF69B4, 20, 0.6, 0, 0);" />
 
-                  <ScrollPane fx:id="directionsScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="300">
+                  <ScrollPane fx:id="directionsScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="300" style="-fx-padding: 10;">
                      <content>
-                        <VBox fx:id="directionsVBox" spacing="5" />
+                        <VBox fx:id="directionsVBox" spacing="10" style="-fx-padding: 10;" />
                      </content>
                   </ScrollPane>
 
-                  <HBox spacing="10" alignment="CENTER">
-                     <Button fx:id="previousButton" text="Previous" />
-                     <Button fx:id="nextButton" text="Next" />
-                     <Button fx:id="clearButton" text="Clear" />
-                     <Button fx:id="saveMealButton" text="Save Current Meal" />
+                  <HBox spacing="15" alignment="CENTER">
+                     <Button fx:id="previousButton" text="Previous" style="-fx-font-size: 14px;" />
+                     <Button fx:id="nextButton" text="Next" style="-fx-font-size: 14px;" />
+                     <Button fx:id="clearButton" text="Clear" style="-fx-font-size: 14px;" />
+                     <Button fx:id="saveMealButton" text="Save Current Meal" style="-fx-font-size: 14px;" />
                   </HBox>
                </VBox>
             </GridPane>
@@ -130,39 +132,37 @@
 
          <!-- Ingredients Pane -->
          <VBox fx:id="ingredientsPane" spacing="20" visible="false" alignment="CENTER">
-            <Label text="Ingredients Pane" style="-fx-font-size: 24px;" />
+            <padding>
+               <Insets top="20" right="20" bottom="20" left="20" />
+            </padding>
+            <Label text="Ingredients Pane" style="-fx-font-size: 24px; -fx-text-fill: white;" />
 
-            <VBox spacing="10" alignment="CENTER">
-               <Label text="Saved Meals" style="-fx-font-size: 18px;" />
-               <ListView fx:id="savedMealsListView" prefHeight="200" prefWidth="300" />
+            <VBox spacing="15" alignment="CENTER">
+               <Label text="Saved Meals" style="-fx-font-size: 18px; -fx-text-fill: white;" />
+               <ListView fx:id="savedMealsListView" prefHeight="200" prefWidth="300" style="-fx-font-size: 14px;" />
             </VBox>
 
-            <ScrollPane fitToWidth="true" prefHeight="300" prefWidth="300">
+            <ScrollPane fitToWidth="true" prefHeight="300" prefWidth="300" style="-fx-padding: 10;">
                <content>
-                  <TilePane fx:id="savedMealIngredientsTilePane" hgap="10" vgap="10">
-                     <padding>
-                        <Insets top="10" right="10" bottom="10" left="10"/>
-                     </padding>
-                  </TilePane>
+                  <TilePane fx:id="savedMealIngredientsTilePane" hgap="10" vgap="10" style="-fx-padding: 10;" />
                </content>
             </ScrollPane>
 
-            <HBox spacing="10" alignment="CENTER">
-               <ComboBox fx:id="daysComboBox" promptText="Select Day" prefWidth="200"/>
-               <Button fx:id="assignMealButton" text="Assign Meal to Day" />
+            <HBox spacing="15" alignment="CENTER">
+               <ComboBox fx:id="daysComboBox" promptText="Select Day" prefWidth="200" style="-fx-font-size: 14px;" />
+               <Button fx:id="assignMealButton" text="Assign Meal to Day" style="-fx-font-size: 14px;" />
             </HBox>
          </VBox>
 
-
          <!-- Calendar Pane -->
          <VBox fx:id="calendarPane" spacing="20" visible="false" alignment="CENTER">
-            <Label text="Weekly Meal Plan" style="-fx-font-size: 24px;" />
+            <padding>
+               <Insets top="20" right="20" bottom="20" left="20" />
+            </padding>
+            <Label text="Weekly Meal Plan" style="-fx-font-size: 24px; -fx-text-fill: white;" />
 
-            <ListView fx:id="calendarMealPlanListView" prefWidth="400" prefHeight="500" />
+            <ListView fx:id="calendarMealPlanListView" prefWidth="400" prefHeight="500" style="-fx-font-size: 14px;" />
          </VBox>
-
-
       </StackPane>
    </center>
-
 </BorderPane>
